# project-root

./: .cursorrules  .env.development  .env.production  .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
backend/: .gitignore  Cargo.toml  crawl4ai_client.py  package.json  pyproject.toml  requirements.txt  server.py
backend/api/ingestor/: ingestor-main.rs  queue.rs
backend/api/middleware/: dataTransformer.rs
backend/api/routes/: security.rs
backend/communication-layer/: pyproject.toml
backend/communication-layer/api/: routes.py  schemas.py
backend/communication-layer/core/: config.py
backend/companion_app/: .env  __init__.py  api_endpoints.py  config.py  crawl4ai_client.py  db_utils.py  models.py  requirements.txt  search_engines.py  server.py  test_crawl4ai.py  view_db.py
backend/config/: default.json
backend/eliza-starter/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json  tsconfig.json
backend/scripts/: clean_env.sh  setup_env.sh  start.sh
backend/services/: aiIntegration.rs  cache.rs  dataTransformation.rs  dbIntegration.rs  dkgIntegration.rs  hybridEncryption.rs  ipfsStorage.rs  natsQueue.rs  notificationService.rs  privacyPreservation.rs  torRouting.rs
backend/src/: lib.rs  main.rs
backend/trading/: KeypairManager.ts  RAGIntegratedTradeManager.ts  TradeManager.ts  TradeRAGProvider.ts
backend/utils/: cryptoUtils.rs  errorHandler.rs  jwtUtils.rs  quantumCryptoUtils.rs
backend/zkpModule/: README.md
(+373 files in other folders)
