[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
hyper = "0.14"
hyper-tls = "0.5"
anyhow = "1.0"
env_logger = "0.9"
log = "0.4"

# For optional HTTPS MITM:
rustls = "0.21"
tokio-rustls = "0.23"
rcgen = "0.9"
